--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A website for a service that picks up packages and does returns for you.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build && cd ../server && npm install && npm run build"
   },
   "repository": {
     "type": "git",
